# ScamShieldVN

./: .env.example  .gitignore  HUONG_DAN_SU_DUNG.md  HUONG_PHAT_TRIEN.md  README.md  predict.py  pyproject.toml  requirements.txt
config/: pii_patterns.yaml  pipeline.yaml  sources.yaml  taxonomy_seed.yaml  vietnamese_sources.yaml
data/public_kaggle/: LICENSE_NOTES.md  README.md  data_manifest.json  dataset-metadata.json  dataset_card.md  scamshield_vn_public.csv  scamshield_vn_public.jsonl  scamshield_vn_public.parquet
models/: url_classifier_metadata.json
notebooks/: train_url_classifier.py
reports/: data_quality_report.md
src/: __init__.py  __main__.py  cli.py  main.py
src/collectors/: __init__.py  base.py  benign_domains.py  benign_messages.py  openphish.py  phishtank.py  robots_checker.py  safe_browsing.py  tin_nhiem_mang.py  tranco.py  urlhaus.py  vietnamese_official.py  virustotal.py
src/config/: __init__.py  env.py  registry.py  settings.py
src/exporters/: __init__.py  dataset_card.py  excel_metadata.py  license_notes.py  manifest.py  private_raw.py  processed_private.py  public_kaggle.py  public_sanitizer.py  readme_generator.py
src/models/: __init__.py  enums.py  manifest.py  record.py  review.py  source.py
src/processors/: __init__.py  cleaner.py  conflict_detector.py  deduplicator.py  evidence_scorer.py  labeler.py  named_entity_detector.py  pii_masker.py  pipeline.py  public_safety.py  review_queue.py  training_ready.py
src/utils/: __init__.py  http_client.py
src/validators/: __init__.py  kaggle_gate.py  pii_validator.py  private_leak_check.py  quality_report.py  redistribution_validator.py
tests/: __init__.py
tests/integration/: __init__.py
tests/property/: test_pbt_registry.py
tests/unit/: __init__.py  test_enums.py  test_registry.py
(+4 files in other folders)
