[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scamshield-vn"
version = "0.1.0"
description = "Vietnamese online scam and phishing detection dataset pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ScamShield VN Team"},
]
keywords = ["scam", "phishing", "vietnam", "dataset", "cybersecurity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "loguru>=0.7.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "tenacity>=8.2.0,<9.0.0",
    "httpx>=0.25.0,<1.0.0",
    "pandas>=2.1.0,<3.0.0",
    "pyarrow>=14.0.0,<18.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "tldextract>=5.0.0,<6.0.0",
    "validators>=0.22.0,<1.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "rich>=13.0.0,<14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "hypothesis>=6.90.0,<7.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
]

[project.scripts]
scamshield = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
